--- a/FoodApp/Base.lproj/LaunchScreen.storyboard
+++ b/FoodApp/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +18,52 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="mBB-nF-3Va">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo1" translatesAutoresizingMaskIntoConstraints="NO" id="T7g-dk-cbo">
+                                <rect key="frame" x="112.5" y="128" width="150" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="MnI-fO-Fsd"/>
+                                    <constraint firstAttribute="width" constant="150" id="Pjm-Sy-LpV"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="app Name Should be Here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1mu-Lc-jqE">
+                                <rect key="frame" x="16" y="256" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.35829658742331288" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Sni-jV-tLU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="mBB-nF-3Va" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="0Ln-wn-bMx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="1mu-Lc-jqE" secondAttribute="bottom" constant="371" id="Eso-Cq-Dll"/>
+                            <constraint firstAttribute="trailing" secondItem="mBB-nF-3Va" secondAttribute="trailing" id="RzT-hD-Rbw"/>
+                            <constraint firstItem="mBB-nF-3Va" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="evn-eA-iLH"/>
+                            <constraint firstItem="T7g-dk-cbo" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="121" id="gOa-eI-HaU"/>
+                            <constraint firstItem="mBB-nF-3Va" firstAttribute="centerX" secondItem="T7g-dk-cbo" secondAttribute="centerX" id="gWN-Ny-Fxc"/>
+                            <constraint firstItem="1mu-Lc-jqE" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="ghd-vF-rf1"/>
+                            <constraint firstItem="T7g-dk-cbo" firstAttribute="top" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="108" id="hOn-DR-6gL"/>
+                            <constraint firstItem="1mu-Lc-jqE" firstAttribute="top" secondItem="T7g-dk-cbo" secondAttribute="bottom" constant="8" symbolic="YES" id="ner-Ot-EYc"/>
+                            <constraint firstItem="T7g-dk-cbo" firstAttribute="centerX" secondItem="1mu-Lc-jqE" secondAttribute="centerX" id="sDg-2J-Wdf"/>
+                            <constraint firstItem="mBB-nF-3Va" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="yuc-tw-Sew"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="back" width="1300" height="894"/>
+        <image name="logo1" width="227" height="222"/>
+    </resources>
 </document>
